--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 packaging==24.2
 gradio==5.23.1
 opencv-python==4.11.0.86
-llama_cpp_python==0.3.8
 transformers==4.50.3
-torch==2.6.0
+qwen-vl-utils==0.0.10
+accelerate==1.6.0
+torchvision==0.21.0
