--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ opencv-python==4.11.0.86
 transformers==4.50.3
 qwen-vl-utils==0.0.10
 accelerate==1.6.0
-torchvision==0.21.0
+torch==2.0.0+cu117
+-f https://download.pytorch.org/whl/torch_stable.html
