--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-accelerate==1.6.0
-aiofiles==23.2.1
+aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
-av==14.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
-cmake==4.0.0
+colorclass==2.2.2
+docopt==0.6.2
 fastapi==0.115.12
 ffmpy==0.5.0
 filelock==3.18.0
 fsspec==2025.3.2
-gradio==5.23.1
+gradio==5.25.2
 gradio_client==1.8.0
 groovy==0.1.2
 h11==0.14.0
@@ -20,32 +19,16 @@ httpx==0.28.1
 huggingface-hub==0.30.2
 idna==3.10
 Jinja2==3.1.6
-lit==18.1.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.0.0
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+numpy==2.2.4
 opencv-python==4.11.0.86
 orjson==3.10.16
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
-psutil==7.0.0
+pip-upgrader==1.4.15
 pydantic==2.11.3
 pydantic_core==2.33.1
 pydub==0.25.1
@@ -54,26 +37,18 @@ python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
-qwen-vl-utils==0.0.10
-regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
-ruff==0.11.5
+ruff==0.11.6
 safehttpx==0.1.6
-safetensors==0.5.3
 semantic-version==2.10.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
-sympy==1.13.1
-tokenizers==0.21.1
+terminaltables==3.1.10
 tomlkit==0.13.2
-torch==2.6.0
-torchvision==0.21.0
 tqdm==4.67.1
-transformers==4.50.3
-triton==3.2.0
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
