--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+accelerate==1.7.0
 aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
+audioop-lts==0.2.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
 colorclass==2.2.2
 docopt==0.6.2
 fastapi==0.115.12
@@ -46,6 +49,7 @@ packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
 pip-upgrader==1.4.15
+psutil==7.0.0
 pydantic==2.11.3
 pydantic_core==2.33.1
 pydub==0.25.1
@@ -61,6 +65,7 @@ ruff==0.11.6
 safehttpx==0.1.6
 safetensors==0.5.3
 semantic-version==2.10.0
+setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -82,4 +87,3 @@ urllib3==2.4.0
 uvicorn==0.34.1
 wcwidth==0.2.13
 websockets==15.0.1
-git+https://github.com/openai/CLIP.git#egg=clip
