--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,22 @@
-accelerate==1.7.0
 aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
-colorclass==2.2.2
-docopt==0.6.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+exceptiongroup==1.3.0
 fastapi==0.115.12
 ffmpy==0.5.0
 filelock==3.18.0
-fsspec==2025.3.2
-ftfy==6.3.1
-gradio==5.25.2
-gradio_client==1.8.0
+fsspec==2025.5.1
+gradio==5.31.0
+gradio_client==1.10.1
 groovy==0.1.2
-h11==0.14.0
-httpcore==1.0.8
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.28.1
-huggingface-hub==0.30.2
+huggingface-hub==0.32.2
 idna==3.10
 Jinja2==3.1.6
 markdown-it-py==3.0.0
@@ -27,30 +24,13 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
-numpy==2.2.4
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
-opencv-python==4.11.0.86
-orjson==3.10.16
-packaging==24.2
+numpy==2.2.6
+orjson==3.10.18
+packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
-pip-upgrader==1.4.15
-psutil==7.0.0
-pydantic==2.11.3
-pydantic_core==2.33.1
+pydantic==2.11.5
+pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
@@ -60,29 +40,24 @@ PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
-ruff==0.11.6
+ruff==0.11.11
 safehttpx==0.1.6
 safetensors==0.5.3
 semantic-version==2.10.0
-setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 sympy==1.14.0
-terminaltables==3.1.10
 tokenizers==0.21.1
 tomlkit==0.13.2
 torch==2.7.0
-torchvision==0.22.0
 tqdm==4.67.1
 transformers==4.52.3
-triton==3.3.0
-typer==0.15.2
-typing-inspection==0.4.0
+typer==0.16.0
+typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
-uvicorn==0.34.1
-wcwidth==0.2.13
+uvicorn==0.34.2
 websockets==15.0.1
