--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
+audioop-lts==0.2.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
@@ -25,6 +26,7 @@ mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.6
+opencv-python==4.11.0.86
 orjson==3.10.18
 packaging==25.0
 pandas==2.2.3
@@ -44,6 +46,7 @@ ruff==0.11.11
 safehttpx==0.1.6
 safetensors==0.5.3
 semantic-version==2.10.0
+setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
